--- a/package.json
+++ b/package.json
@@ -30,10 +30,15 @@
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bun": "latest",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript/native-preview": "^7.0.0-dev.20260128.1",
+    "happy-dom": "^20.4.0",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "tailwindcss": "^4.1.11",
