--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^6.17.0",
     "react": "^19",
     "react-dom": "^19",
+    "react-resizable-panels": "^4.5.4",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
