--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun --hot src/index.ts",
+    "dev:tunnel": "tailscale funnel 3000",
     "start": "NODE_ENV=production bun src/index.ts",
     "build": "bun run build.ts",
     "build:ts": "tsgo --build",
@@ -12,7 +13,8 @@
     "lint:fix": "oxlint --fix .",
     "format": "oxfmt --write .",
     "format:check": "oxfmt --check .",
-    "typecheck": "tsgo --noEmit"
+    "typecheck": "tsgo --noEmit",
+    "prepare": "husky"
   },
   "dependencies": {
     "@deepgram/sdk": "^4.11.3",
@@ -27,7 +29,7 @@
     "openai": "^6.17.0",
     "react": "^19",
     "react-dom": "^19",
-    "react-resizable-panels": "^4.5.4",
+    "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
@@ -40,10 +42,21 @@
     "@types/react-dom": "^19",
     "@typescript/native-preview": "^7.0.0-dev.20260128.1",
     "happy-dom": "^20.4.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "oxfmt": "^0.27.0",
     "oxlint": "^1.42.0",
     "tailwindcss": "^4.1.11",
     "tw-animate-css": "^1.4.0"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "oxlint --fix",
+      "oxfmt --write"
+    ],
+    "*.{json,md,html,css}": [
+      "oxfmt --write"
+    ]
   },
   "packageManager": "bun@1.2.0"
 }
