fix: StrictModeでWSが無効化される問題を修正
- useMeetingControllerをStrictMode安全に再生成\n- WS自動再接続/状態追加\n- 本番はStrictModeを外す(HMR時のみ)\n- typecheck通過

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "bun --hot src/index.ts",
     "dev:tunnel": "tailscale funnel 3000",
+    "tunnel": "tailscale funnel 3000",
     "start": "NODE_ENV=production bun src/index.ts",
     "build": "bun run build.ts",
     "build:ts": "tsgo --build",
